replace bootstrap cols. add Panels

--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -119,8 +119,15 @@ body {
     text-align:left;
     min-height: 60px;
     display: inline;
-    a{
-      display: inline;
+    h5{
+      a, span{
+        display: inline;
+        text-decoration: none;
+        color:#685ab1;
+      }
+      a:hover{
+        text-decoration: underline;
+      }
     }
   }
   img {
@@ -146,7 +153,7 @@ body {
 
 .post{
   h1{
-    color:#685ab1;
+    color:black;
     width: 90%;
     text-align: center;
     margin:0 auto;
@@ -183,9 +190,9 @@ body {
 /*colores*/
 
 a{
-  color:#685ab1;
+  color:black;
 }
 
 a:hover{
-  color:black;
+  color:#685ab1;
 }
