--- a/templates/views/blog.hbs
+++ b/templates/views/blog.hbs
@@ -32,6 +32,10 @@
 </div>
 -->
 
+
+     
+
+
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container-fluid">
         <div class="navbar-header">
@@ -58,6 +62,7 @@
     </nav>
 
     <div class="container-fluid">
+      <!-- ROW -->
       <div class="row">
         <div class="col-sm-3 col-md-3 sidebar">
           <ul class="nav nav-sidebar">
@@ -87,41 +92,32 @@
             <li><a href="">Teoría Foto</a></li>
           </ul>
         </div>
-        <div class="col-sm-9 col-sm-offset-3 col-md-9 col-md-offset-3 main">
+        <!-- COL POSTS -->
+     <div class="col-sm-9 col-sm-offset-3 col-md-9 col-md-offset-3 main">
+                  {{ data.posts.results.categories}} 
 
-          <div class="row entradas">
-        
-          <div class="col-md-12">
+              <div class="row masonry" style="background:white;padding:15px;">
 
-            {{ data.posts.results.categories}} 
+   {{# each data.posts.results}}
 
-            <hr>
+                  <div class="panel panel-default">
+                      <div class="panel-heading"><a href="{{postUrl slug}}">{{{title}}}</a></div>
+                      <div class="panel-body">
+                      <h5>{{{categoryList categories prefix="En la categoría "}}}{{#if author.name.first}} por <span class="destaca">{{author.name.first}}{{/if}}</span></h5>
 
-          </div>
+                         <a href="{{postUrl slug}}"><img src="{{cloudinaryUrl image width=400 height=200}}" class="img-responsive" alt="{{{title}}}"></a>
+                          {{{content.brief}}}
+                        </div>
+                  </div>
+  {{/each}}
 
-        {{# each data.posts.results}}
+              </div>
 
 
-            <div class="col-xs-12 col-sm-6 entradaunica">
-                   <a href="{{postUrl slug}}">
-                      <img src="{{cloudinaryUrl image width=400 height=200}}" class="img-responsive" alt="{{{title}}}">
-                   </a>
-
-                <div class="info">
-              
-                  <h5>{{{categoryList categories prefix="En la categoría "}}}{{#if author.name.first}} por {{author.name.first}}{{/if}}</h5>
-                  
-                  <h2><a href="{{postUrl slug}}">{{{title}}}</a></h2>
-                
-                </div>
-             
-             </div>
-
-        {{/each}}
-
-          </div>
 
 
         </div>
-      </div>
-    </div>
+        <!-- //COL POSTS -->
+
+    </div> 
+    <!-- //ROW -->
