--- a/templates/views/layouts/blog.hbs
+++ b/templates/views/layouts/blog.hbs
@@ -31,5 +31,26 @@
 			<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 			<script src="/js/todo.min.js"></script>
 		
+
+
+			<style>
+
+			*, *:before, *:after {box-sizing:  border-box !important;}
+
+
+			.masonry{
+			 -moz-column-width: 25em;
+			 -webkit-column-width: 25em;
+			 -moz-column-gap: .5em;
+			 -webkit-column-gap: .5em; 
+			  
+			}
+
+			.panel {
+			 display: inline-block;
+			}
+			</style>
+
+
 	</body>
 </html>
