change css name

--- a/templates/views/layouts/blog.hbs
+++ b/templates/views/layouts/blog.hbs
@@ -15,7 +15,7 @@
 		<title>neurobits</title>
 		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-		<link href="/styles/site.min.css" rel="stylesheet">
+		<link href="/styles/site.css" rel="stylesheet">
 		
 		<!--[if lt IE 9]>
 			<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js" />
