--- a/templates/views/layouts/default.hbs
+++ b/templates/views/layouts/default.hbs
@@ -15,7 +15,7 @@
 		<title>neurobits</title>
 		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-		<link href="/styles/site.min.css" rel="stylesheet">
+		<link href="/styles/site.css" rel="stylesheet">
 		
 		{{!-- This file provides the default styling for the KeystoneJS Content Editor 
 			- only renders when user is logged in and admin--}}
