--- a/templates/views/post.hbs
+++ b/templates/views/post.hbs
@@ -1,107 +1,23 @@
-<!--<div class="container">
-	<div class="row">
-		<div class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
-			<article>
-				<p><a href="/blog">&larr; volver al blog</a></p>
-				<hr>
-				<header>
-					<h1>{{data.post.title}}</h1>
-						<img src="{{cloudinaryUrl data.post.image width=750 height=400}}" alt="{{data.post.title}}" class="img-responsive" />
-					<h5>
-						{{{categoryList data.post.categories prefix="En la categoría "}}}
-						{{#if author.name.first}}por {{author.name.first}}{{/if}}
-					</h5>
-				</header>
-				<div class="post">
-					{{{data.post.content.extended}}}
-				</div>
-			</article>
-		</div>
-	</div>
-</div>
-
--->
-
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">neurobits</a>
+<div class="container-fluid">
+  <div class="row">
+    {{>sidebar}}
+    <div class="col-sm-9 col-sm-offset-3 col-md-9 col-md-offset-3 main single">
+      <div class="row entradas">
+        <article>
+        <p><a href="/blog">&larr; volver al blog</a>  {{{categoryList data.post.categories prefix="&#124; "}}} &#124; {{data.post.title}} </p>
+        <hr>
+        <header>
+          <h1>{{data.post.title}}</h1>
+          <img src="{{cloudinaryUrl data.post.image width=830 height=430}}" alt="{{data.post.title}}" class="img-responsive" />
+          <h2>{{{categoryList data.post.categories prefix="En la categoría "}}} {{#if author.name.first}}por {{author.name.first}}{{/if}}</h2>
+        </header>
+        
+        <div class="textpost">
+          {{{data.post.content.extended}}}
         </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Dashboard</a></li>
-            <li><a href="#">Settings</a></li>
-            <li><a href="#">Profile</a></li>
-            <li><a href="#">Help</a></li>
-          </ul>
-          <form class="navbar-form navbar-right">
-            <input type="text" class="form-control" placeholder="Search...">
-          </form>
-        </div>
-      </div>
-    </nav>
-
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-sm-3 col-md-3 sidebar">
-          <ul class="nav nav-sidebar">
-            <li class="active"><a href="#">Desarrollo Web <span class="sr-only">(current)</span></a></li>
-            <li><a href="#">Desarrollo Movil</a></li>
-            <li><a href="#">Diseño</a></li>
-            <li><a href="#">UI / UX</a></li>
-            <li><a href="#">Servidores</a></li>
-            <li><a href="#">Seguridad Informática</a></li>
-            <li><a href="#">Hacking Ético</a></li>
-          </ul>
-          <ul class="nav nav-sidebar">
-            <li><a href="">Cine DSLR</a></li>
-            <li><a href="">Postproducción Imagen</a></li>
-            <li><a href="">Postproducción Sonido</a></li>
-            <li><a href="">Motion Graphic</a></li>
-            <li><a href="">More navigation</a></li>
-          </ul>
-          <ul class="nav nav-sidebar">
-            <li><a href="">Fotografía</a></li>
-            <li><a href="">Software Foto</a></li>
-            <li><a href="">Teoría Foto</a></li>
-            <li><a href="">Teoría Foto</a></li>
-            <li><a href="">Teoría Foto</a></li>
-            <li><a href="">Teoría Foto</a></li>
-            <li><a href="">Teoría Foto</a></li>
-            <li><a href="">Teoría Foto</a></li>
-          </ul>
-        </div>
-        <div class="col-sm-9 col-sm-offset-3 col-md-9 col-md-offset-3 main single">
-
-          <div class="row entradas">
-
-
-        	<article>
-				<p><a href="/blog">&larr; volver al blog</a>  {{{categoryList data.post.categories prefix="&#124; "}}} &#124; {{data.post.title}} </p>
-				<hr>
-				<header>
-					<h1>{{data.post.title}}</h1>
-					<img src="{{cloudinaryUrl data.post.image width=830 height=430}}" alt="{{data.post.title}}" class="img-responsive" />
-
-					<h2>{{{categoryList data.post.categories prefix="En la categoría "}}} {{#if author.name.first}}por {{author.name.first}}{{/if}}</h2>
-				</header>
-				
-				<div class="textpost">
-					{{{data.post.content.extended}}}
-				</div>
-			
-			</article>
-
-
-          </div>
-
-
-        </div>
+        
+        </article>
       </div>
     </div>
+  </div>
+</div>
