--- a/templates/views/layouts/blog.hbs
+++ b/templates/views/layouts/blog.hbs
@@ -24,6 +24,8 @@
 		
 	</head>
 	<body>
+			{{>navbar}}
+			
 			{{{body}}}
 			
 			<script src="//cdn.jsdelivr.net/jquery/1.11.2/jquery.min.js"></script>
