minify, add homepage partial

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -1,8 +1,1 @@
-<div id="particles">
-  <div class="intro">
-    <h1>neurobits</h1>
-    <p>contacto</p>
-    <p>nicolas@neurobits.cl</p>
-    <a href="/blog" class="btn">Blog</a>
-  </div>
-</div>
+<div id="particles"> <div class="intro"> <p>contacto</p><p>nicolas@neurobits.cl</p><a href="/blog" class="btn"> ir al Blog </a> </div></div>
