reordering JS files, romove jquery and bootstrap from CDN, add local files and build all js with GULP

--- a/devAssets/less/site/variables.less
+++ b/devAssets/less/site/variables.less
@@ -1,3 +1,11 @@
 //genral site vars
 
-@font-size-base: 14px;
+@sourcesans 			: 'Source Sans Pro', sans-serif;
+@font-size-base 		: 14px;
+
+
+//colores
+
+@morado 				: #685ab1;
+
+
