--- a/devAssets/less/site/layout.less
+++ b/devAssets/less/site/layout.less
@@ -1,145 +1,35 @@
 /*
- * Base structure
+ * Base structure, general
  */
-
-*, *:before, *:after {box-sizing:  border-box !important;}
-
+ *, *:before, *:after {
+    box-sizing: border-box !important;
+}
 /* Move down content because we have a fixed navbar that is 50px tall */
-body {
-  padding-top: 50px;
-  font-family: 'Source Sans Pro', sans-serif;
+ body {
+    padding-top: 50px;
+    font-family:@sourcesans;
 }
-
-/*
- * Global add-ons
- */
-
-.sub-header {
-  padding-bottom: 10px;
-  border-bottom: 1px solid #eee;
+/*colores*/
+ a {
+    color:black;
 }
-
-/*
- * Top navigation
- * Hide default border to remove 1px line.
- */
-.navbar-fixed-top {
-  border: 0;
+a:hover {
+    color:@morado;
 }
-/*
- * Sidebar
- */
-
-/* Hide for mobile, show later */
-.sidebar {
-  display: none;
-}
-@media (min-width: 768px) {
-  .sidebar {
-    position: fixed;
-    top: 51px;
-    bottom: 0;
-    left: 0;
-    z-index: 1000;
-    display: block;
-    padding: 20px;
-    overflow-x: hidden;
-    overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
-    background-color: #f5f5f5;
-    border-right: 1px solid #eee;
-  }
-}
-
-/* Sidebar navigation */
-.nav-sidebar {
-  margin-right: -21px; /* 20px padding + 1px border */
-  margin-bottom: 20px;
-  margin-left: -20px;
-}
-.nav-sidebar > li > a {
-  padding-right: 20px;
-  padding-left: 20px;
-}
-.nav-sidebar > .active > a,
-.nav-sidebar > .active > a:hover,
-.nav-sidebar > .active > a:focus {
-  color: #fff;
-  background-color: #428bca;
-}
-
 
 /*
  * Main content
  */
-
-.main {
-  padding: 20px;
-  background: #F8F9FA;
+ .main {
+    padding: 20px;
+    background: #F8F9FA;
 }
 @media (min-width: 768px) {
-  .main {
-    padding-right: 90px;
-    padding-left: 90px;
-  }
+    .main {
+        padding-right: 90px;
+        padding-left: 90px;
+    }
 }
 .main .page-header {
-  margin-top: 0;
-}
-
-.post{
-  h1{
-    color:black;
-    width: 90%;
-    text-align: center;
-    margin:0 auto;
-    font-weight: 600;
-    margin-top:30px;
-    margin-right:auto;
-    margin-bottom:30px;
-    margin-left:auto;
-  }
-}
-.textpost{
-  width:90%;
-  margin:0 auto;
-}
-@media (min-width: 1440px){
-  body{
-    width:1280px !important;
-    margin: 0 auto;
-  }
-  .sidebar{
-    background-color: #f5f5f5;
-    border-right: 1px solid #eee;
-    display: inline-block;
-    padding: 20px;
-    position: relative !important;
-    top:0px !important;
-  }
-  .main{
-    margin-left:0px !important;
-  }
-}
-.masonry{
-   -moz-column-width: 25em;
-   -webkit-column-width: 25em;
-   -moz-column-gap: .5em;
-   -webkit-column-gap: .5em; 
-  
-}
-.panel {
-  display: inline-block;
-  max-width: 100%;
-  border:none;
-  box-shadow:none;
-}
-
-/*colores*/
-
-a{
-  color:black;
-}
-
-a:hover{
-  color:#685ab1;
+    margin-top: 0;
 }
