--- a/devAssets/less/site/variables.less
+++ b/devAssets/less/site/variables.less
@@ -1,11 +1,9 @@
 //genral site vars
-
 @sourcesans 			: 'Source Sans Pro', sans-serif;
-@font-size-base 		: 14px;
+@bitter 				: 'Bitter', serif;
+
 
 
 //colores
-
 @morado 				: #685ab1;
-
-
+@grisClaro 				: #d9e0e2;
