--- a/devAssets/less/site/blog.less
+++ b/devAssets/less/site/blog.less
@@ -1,46 +1,13 @@
 /* blog */
 
- .post {
-    h1 {
-        color:black;
-        width: 90%;
-        text-align: center;
-        margin:0 auto;
-        font-weight: 600;
-        margin-top:30px;
-        margin-right:auto;
-        margin-bottom:30px;
-        margin-left:auto;
-    }
-}
-.textpost {
-    width:90%;
-    margin:0 auto;
-}
-
-@media (min-width: 1440px) {
-    body {
-        width:1280px !important;
-        margin: 0 auto;
-    }
-    .sidebar {
-        background-color: #f5f5f5;
-        border-right: 1px solid #eee;
-        display: inline-block;
-        padding: 20px;
-        position: relative !important;
-        top:0px !important;
-    }
-    .main {
-        margin-left:0px !important;
-    }
-}
-
 .masonry {
     -moz-column-width: 25em;
     -webkit-column-width: 25em;
     -moz-column-gap: .5em;
     -webkit-column-gap: .5em;
+    border:1px solid @grisClaro;
+    background:white;
+    padding:15px;
 }
 
 .panel {
@@ -48,4 +15,66 @@
     max-width: 100%;
     border:none;
     box-shadow:none;
+    margin-bottom:5px;
 }
+
+.postsloop{
+    h2{
+        font-size: 1.8em;
+        font-weight: 300;
+        margin-top: 5px;
+        a{
+            text-decoration: none;
+        }
+    }
+    h3{
+        font-weight: 300;
+        font-size: 1.1em;
+        margin-bottom: 5px;
+        margin-top: 7px;
+        text-transform: lowercase;
+        color: darken(@grisClaro, 55%);
+        a, span{
+            color: @morado;
+            font-weight: 400;
+        }
+        time{
+            font-style: italic;
+            text-transform: capitalize;
+        }
+    }
+    img{
+        border: 1px solid @grisClaro;
+        &:hover{
+            filter: blur(0.3px) grayscale(40%);
+        }
+    }
+}
+
+/*
+ * DESTACADOS 
+*/ 
+
+.row.destacados{
+    background: white;
+    padding: 30px 20px 20px 20px;
+    border: 1px solid @grisClaro;
+    border-bottom:none;
+
+    .postsloop;
+    
+    .minipost{
+        &:first-child{
+            margin-bottom: 30px;
+        }
+        h2{
+            font-size: 1.5em;
+        }
+    }
+
+}
+
+
+
+
+
