--- a/devAssets/less/site/layout.less
+++ b/devAssets/less/site/layout.less
@@ -7,14 +7,14 @@
 /* Move down content because we have a fixed navbar that is 50px tall */
  body {
     padding-top: 50px;
-    font-family:@sourcesans;
+    font-family: @sourcesans;
 }
 /*colores*/
- a {
+a {
     color:black;
 }
 a:hover {
-    color:@morado;
+    color: @morado;
 }
 
 /*
@@ -32,4 +32,22 @@ a:hover {
 }
 .main .page-header {
     margin-top: 0;
+}
+
+@media (min-width: 1440px) {
+    body {
+        width:1280px !important;
+        margin: 0 auto;
+    }
+    .sidebar {
+        background-color: #f5f5f5;
+        border-right: 1px solid #eee;
+        display: inline-block;
+        padding: 20px;
+        position: relative !important;
+        top:0px !important;
+    }
+    .main {
+        margin-left:0px !important;
+    }
 }
