Add <search> functionality

--- a/templates/views/partials/navbar.hbs
+++ b/templates/views/partials/navbar.hbs
@@ -11,11 +11,11 @@
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Inicio</a></li>
+        <li><a href="/blog">Inicio</a></li>
         <li><a href="#">Contacto</a></li>
       </ul>
-      <form class="navbar-form navbar-right">
-        <input type="text" class="form-control" placeholder="Buscar...">
+      <form class="navbar-form navbar-right" method="GET" action="/buscar/">
+        <input type="text" class="form-control" placeholder="Buscar..." name="b">
       </form>
     </div>
   </div>
