prepare for production, some design changes

--- a/devAssets/less/site/layout.less
+++ b/devAssets/less/site/layout.less
@@ -51,3 +51,21 @@ a:hover {
         margin-left:0px !important;
     }
 }
+
+nav{
+    background: #222222 !important;
+    border: none!important;
+
+    a, li, span{
+        color:#00D8FF !important;
+    }
+    .form-control{
+        color:black !important;
+    }
+}
+
+
+
+
+
+
