--- a/devAssets/less/site/post.less
+++ b/devAssets/less/site/post.less
@@ -2,6 +2,7 @@
 
 article#post {
  	background-color: white;
+    border: 1px solid @grisClaro;
  	#breadcrumb{
  		background-color: white;
  		padding:20px 20px 0px 20px;
