--- a/templates/views/partials/navbar.hbs
+++ b/templates/views/partials/navbar.hbs
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">neurobits</a>
+      <a class="navbar-brand" href="/blog">neurobits</a><span> webDev + tech + cine + fotografía</span>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
