--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -1,1 +1,1 @@
-<div id="particles"> <div class="intro"> <p>contacto</p><p>nicolas@neurobits.cl</p><a href="/blog" class="btn"> ir al Blog </a> </div></div>
+<div id="particles"><!--<div class="intro"> <p>contacto</p><p>nicolas@neurobits.cl</p><a href="/blog" class="btn"> ir al Blog </a> </div>--></div>
